@@ -28,6 +28,7 @@
 
 #include "rsvg.h"
 #include "rsvg-paint-server.h"
+#include "rsvg-filter.h"
 
 #include <libxml/SAX.h>
 #include <libart_lgpl/art_svp_vpath_stroke.h>
@@ -65,6 +66,7 @@ typedef struct {
 	gint fill_opacity; /* 0..255 */
 	
 	gint fill_rule;	
+	RsvgFilter *filter;
 
 	RsvgPaintServer *stroke;
 	gint stroke_opacity; /* 0..255 */
@@ -113,6 +115,7 @@ void rsvg_parse_style_attrs (RsvgHandle *ctx, RsvgState *state, const char * tag
 
 gdouble rsvg_viewport_percentage (gdouble width, gdouble height);
 void rsvg_pop_opacity_group (RsvgHandle *ctx, int opacity);
+void rsvg_pop_opacity_group_as_filter (RsvgHandle *ctx, RsvgFilter *filter);
 void rsvg_push_opacity_group (RsvgHandle *ctx);
 gboolean rsvg_parse_transform (double dst[6], const char *src);
 
